# EFD

./: README.md
documentacion/Otros/docs senializacion1/: Detectores de tren.pptx
documentacion/Otros/docs senializacion2/: Conceptos de Ruta 1.pptx
modelado/: EFD.notation  EFD.uml  Esquema del sistema.drawio
modelado/EFD/: .project  EFD.notation  EFD.uml
modelado/Esquemático/: EFD_ElectronicDesign.ms14  EFD_EschematicDesign.ms14
modelado/MapaDeProcesos/: EFD.drawio
modelado/SysML/: EFD.aird  EFD.notation  EFD.uml
modelado/tiraDeVia/: EstacionS BACKUP.scarm  EstacionS.scarm  EstacionX.scarm
requisitos/: Especificacion_Requisitos.docx  Requisitos.docx
src/EFD/CTC/: server_CTC.c
src/EFD/CU/: EFD.adb  EFD.ads  compile.sh  main.adb
src/EFD/CU/Communication/: compile.sh  server.c  server.h  server_CTC.c  server_CTC.h  server_EFD.c
src/EFD/CU/SWITCHS/: compilar.sh
src/EFD/NET/: CMakeLists.txt  main.c
src/EFD/PLO/: server_PLO.c
src/EFD/SWITCHS/: .switch.c.swp  .switch.h.swp  compilar.sh  switch.c  switch.h  test.c  test.out
src/EFD/Section_Controller/main/: CMakeLists.txt  main.c
src/EFD/Section_Controller/main/include/Communication/: socket.c  socket.h
src/EFD/Section_Controller/main/include/rail_section/: section.c  section.h
src/EFD/Signal_Controller/: CMakeLists.txt
src/Section_Controller/: CMakeLists.txt
src/Switch_Controller/: CMakeLists.txt
src/TDE/: CTC.py  TDE.py  commands_shell.py  socket_server.conf  synoptic.py
src/TDE/Components/: Rail.py  Signals.py  Switchs.py
src/communications/: spi.c  spi_pi.c  spi_wiring.c
(+71 files in other folders)
